<resources>
    <string name="app_name">Covid_Tracker</string>
    <string name="home">Home</string>
    <string name="newest_data">Newest Data</string>
    <string name="about_virus">About Virus</string>
    <string name="symptoms">Symptoms</string>
    <string name="prevention">Prevention</string>
    <string name="profile">Profile</string>
    <string name="open_nav_drawer">Navigation Drawer Open</string>
    <string name="close_nav_drawer">Navigation Drawer Close</string>
    <!-- Strings related to login -->
    <string name="prompt_phone_number">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login1">
        Please enter your phone number to Sign In to the Covid Tracker App
    </string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="medical_declared_data">Medical Declared Data</string>
    <string name="covid_data">Covid Data</string>
    <string name="txt_lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book Lorem Ipsum has been .</string>
    <string name="txt_title_symptoms">What are Corona virus Symptoms?</string>
    <string name="txt_login_button">Get OTP</string>
    <string name="password">Password</string>
    <string name="skip">Skip</string>
</resources>