<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:visible="true" />
    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_profile"
        android:title="@string/login"
        android:visible="true" />
    <item
        android:id="@+id/navigation_password"
        android:icon="@drawable/i_icon_nav_bar"
        android:title="@string/password"
        android:visible="true" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:visible="true" />
    <item
        android:id="@+id/navigation_medical_declared_data"
        android:icon="@drawable/i_icon_nav_bar"
        android:title="@string/medical_declared_data"
        android:visible="true" />
    <item
        android:id="@+id/navigation_covid_data"
        android:icon="@drawable/ic_covid_data"
        android:title="@string/covid_data"
        android:visible="true" />
    <item
        android:id="@+id/navigation_about_virus"
        android:icon="@drawable/ic_about_virus"
        android:title="@string/about_virus"
        android:visible="true" />
    <item
        android:id="@+id/navigation_symptoms"
        android:icon="@drawable/ic_symptom"
        android:title="@string/symptoms"
        android:visible="true" />
    <item
        android:id="@+id/navigation_prevention"
        android:icon="@drawable/ic_prevention"
        android:title="@string/prevention"
        android:visible="true" />
    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        android:visible="true" />
</menu>