<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:clickable="false"
        android:translationY="30dp"
        app:srcCompat="@drawable/i_covid" />

    <TextView
        android:id="@+id/text_login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/text_login1"
        android:textSize="17dp"
        android:translationY="50dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/txt_phone_number_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:translationY="100dp"
        android:hint="Phone number"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationY="120dp"
        android:background="@color/colorButtonLogin"
        android:textColor="@color/white"
        android:text="@string/txt_login_button" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:text="@string/skip"
        android:textSize="20sp"
        android:textColor="@color/colorButtonLogin"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>